added script for jspdfautotable and removed cdn from layout

--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     <script src="/node_modules/core-js/client/shim.min.js"></script>
     <script src="/node_modules/zone.js/dist/zone.js"></script>
     <script src="/node_modules/filesaver.js/FileSaver.js"></script>
-    <script src="/node_modules/jspdf/dist/jspdf.min.js"></script>
+    <script src="/node_modules/jspdf/dist/jspdf.debug.js"></script>
     <script src="/node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
     <script src="/node_modules/systemjs/dist/system.src.js"></script>
 
