changed exceljs configuration

--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -18,6 +18,7 @@
     <script src="/node_modules/filesaver.js/FileSaver.js"></script>
     <script src="/node_modules/jspdf/dist/jspdf.debug.js"></script>
     <script src="/node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
+    <script src="/node_modules/exceljs/dist/exceljs.js"></script>
     <script src="/node_modules/systemjs/dist/system.src.js"></script>
     
     
