ip restrictions persists

--- a/Trappist/src/Promact.Trappist.Web/Views/Home/PageNotFound.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/PageNotFound.cshtml
@@ -76,6 +76,7 @@
 <body>
 
     <div class="page-not-found">
+        <h3>@ViewBag.IpAddress</h3>
         <em class="material-icons">sentiment_very_dissatisfied</em>
         <h1>404</h1>
         <h2>Page not found</h2>
