--- a/Trappist/src/Promact.Trappist.Web/wwwroot/css/style.scss
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/css/style.scss
@@ -70,7 +70,7 @@ a {
 }
 
 p {
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .tags {
@@ -730,6 +730,44 @@ md-tooltip-component .mat-tooltip {
 .code-editor {
   min-height: 300px;
   margin: 30px 0;
+}
+
+.page-not-found {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 20%;
+  text-align: center;
+
+  em {
+    font-size: 120px;
+  }
+
+  h1 {
+    font-size: 50px;
+    font-weight: 600;
+    margin: 10px 0;
+  }
+
+  h2 {
+    color: #8c8c8c;
+    font-weight: 600;
+    margin-bottom: 20px;
+  }
+
+  p {
+    margin-bottom: 5px;
+
+    a {
+      text-decoration: none;
+      color: #01B9BB;
+      font-weight: 600;
+
+      &:hover {
+        text-decoration: underline;
+      }
+    }
+  }
 }
 
 /* Layout */
@@ -2095,6 +2133,12 @@ footer {
 
       .qs-area {
         height: calc(100vh - 223px);
+      }
+
+      .mat-radio-button .mat-radio-label,
+      .mat-checkbox .mat-checkbox-layout .mat-checkbox-label {
+        white-space: normal;
+        word-break: break-word;
       }
     }
   }
