--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
@@ -15,7 +15,7 @@
     <!-- Polyfill(s) for older browsers -->
     <script src="/node_modules/core-js/client/shim.min.js"></script>
     <script src="/node_modules/zone.js/dist/zone.js"></script>
-
+    <script src="/node_modules/screenfull/dist/screenfull.js"></script>
     <script src="/node_modules/systemjs/dist/system.src.js"></script>
 
     <script src="/systemjs.config.js"></script>
