--- a/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,10 @@
     <!--TODO: Copy to local maybe-->
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,400i,600,700" rel="stylesheet">
     <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <script>
+        window.angular = {};
+    </script>
 </head>
 
 <body>
