Test online offline ,with test preview problem

--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
     <script src="/node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
     <script src="/node_modules/exceljs/dist/exceljs.js"></script>
     <script src="/node_modules/systemjs/dist/system.src.js"></script>
-    
+    <script src="/node_modules/screenfull/dist/screenfull.js"></script>
     
 
     <script src="/systemjs.config.js"></script>
