--- a/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
@@ -51,8 +51,9 @@
         </div>
     </footer>
     <mini-profiler />
-    <script src="https://cdn.ckeditor.com/4.6.2/standard/ckeditor.js"></script>
-    <script src="https://cdn.ckeditor.com/4.5.11/full-all/plugins/divarea/plugin.js"></script>
+    <script src="https://cdn.ckeditor.com/4.7.2/standard-all/ckeditor.js"></script>
+    <script src="https://cdn.ckeditor.com/4.7.2/standard-all/plugins/divarea/plugin.js"></script>
+    <script src="https://cdn.ckeditor.com/4.7.2/standard-all/plugins/uploadimage/plugin.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.bundle.min.js"></script>
 </body>
 </html>
