--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
@@ -11,13 +11,14 @@
     </div>
 </conduct>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.4.3/lib/alea.min.js"></script>
+
 <environment names="Development">
     <!-- Polyfill(s) for older browsers -->
     <script src="/node_modules/core-js/client/shim.min.js"></script>
     <script src="/node_modules/zone.js/dist/zone.js"></script>
     <script src="/node_modules/screenfull/dist/screenfull.js"></script>
     <script src="/node_modules/systemjs/dist/system.src.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/2.4.3/lib/alea.min.js"></script>
     <script src="/systemjs.config.js"></script>
     <script>
         System.import('/app/main.conduct.js').catch(function (err) { console.error(err); });
