--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
@@ -14,15 +14,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.4.3/lib/alea.min.js"></script>
 
 <environment names="Development">
-    <!-- Polyfill(s) for older browsers -->
-    <script src="/node_modules/core-js/client/shim.min.js"></script>
-    <script src="/node_modules/zone.js/dist/zone.js"></script>
-    <script src="/node_modules/screenfull/dist/screenfull.js"></script>
-    <script src="/node_modules/systemjs/dist/system.src.js"></script>
-    <script src="/systemjs.config.js"></script>
-    <script>
-        System.import('/app/main.conduct.js').catch(function (err) { console.error(err); });
-    </script>
+    <script src="~/dist/vendor.js"></script>
+    <script src="~/dist/main.conduct.js"></script>
 </environment>
 
 <environment names="Staging,Production">
