--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -12,22 +12,10 @@
 </app>
 <form asp-controller="Profile" asp-action="LogOut" method="post" id="logoutForm" class="navbar-right"></form>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.bundle.min.js"></script>
-<environment names="Development">
-    <!-- Polyfill(s) for older browsers -->
-    <script src="/node_modules/core-js/client/shim.min.js"></script>
-    <script src="/node_modules/zone.js/dist/zone.js"></script>
-    <script src="/node_modules/filesaver.js/FileSaver.js"></script>
-    <script src="/node_modules/jspdf/dist/jspdf.debug.js"></script>
-    <script src="/node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
-    <script src="/node_modules/exceljs/dist/exceljs.js"></script>
-    <script src="/node_modules/systemjs/dist/system.src.js"></script>
-    <script src="/node_modules/screenfull/dist/screenfull.js"></script>
-    
 
-  <script src="/systemjs.config.js"></script>
-  <script>
-    System.import('/app/main.js').catch(function (err) { console.error(err); });
-  </script>
+<environment names="Development">
+    <script src="~/dist/vendor.js"></script>
+    <script src="~/dist/main.js"></script>
 </environment>
 
 <environment names="Staging,Production">
