--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Setup.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Setup.cshtml
@@ -12,16 +12,8 @@
 </setup>
 
 <environment names="Development">
-    <!-- Polyfill(s) for older browsers -->
-    <script src="/node_modules/core-js/client/shim.min.js"></script>
-    <script src="/node_modules/zone.js/dist/zone.js"></script>
-
-    <script src="/node_modules/systemjs/dist/system.src.js"></script>
-
-    <script src="/systemjs.config.js"></script>
-    <script>
-        System.import('/app/main.setup.js').catch(function (err) { console.error(err); });
-    </script>
+    <script src="~/dist/vendor.js"></script>
+    <script src="~/dist/main.setup.js"></script>
 </environment>
 
 <environment names="Staging,Production">
