--- a/Trappist/src/Promact.Trappist.Web/wwwroot/css/style.scss
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/css/style.scss
@@ -104,6 +104,10 @@ p {
     margin-left: 10px;
 }
 
+.ml15 {
+  margin-left: 15px;
+}
+
 .mt9 {
     margin-top: 9px;
 }
@@ -172,6 +176,10 @@ p {
     padding-left: 15px;
 }
 
+.cursor-not-allowed {
+  cursor: not-allowed !important;
+}
+
 .warning {
     color: $color_red;
 }
@@ -182,6 +190,10 @@ p {
 
 .fail {
     background-color: $color_red_light;
+}
+
+.partial-fail {
+    background-color: $color_yellow_light;
 }
 
 .light-text {
@@ -735,7 +747,7 @@ md-tooltip-component .mat-tooltip {
 .code-snippet {
     pre {
         white-space: pre-line;
-        margin: 30px 0 0;
+        margin: 15px 0 0;
     }
 
     .programming-guide {
@@ -745,8 +757,8 @@ md-tooltip-component .mat-tooltip {
 }
 
 .code-editor {
-    min-height: 300px;
-    margin: 30px 0;
+    min-height: 200px;
+    margin: 15px 0;
 }
 
 .page-not-found {
@@ -2383,6 +2395,10 @@ footer {
                 }
             }
         }
+    }
+
+    progress {
+      width: 50px;
     }
 }
 
