changed report repository and test.component.ts

--- a/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
       }
     </div>
   </footer>
-  @*<mini-profiler />*@
+  <mini-profiler />
   <script src="https://cdn.ckeditor.com/4.6.2/standard/ckeditor.js"></script>
   <script src="https://cdn.ckeditor.com/4.5.11/full-all/plugins/divarea/plugin.js"></script>
 </body>
