karma configuaration done  with one unit test

--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -22,10 +22,12 @@
     <script src="/node_modules/exceljs/dist/exceljs.js"></script>
     <script src="/node_modules/systemjs/dist/system.src.js"></script>
     <script src="/node_modules/screenfull/dist/screenfull.js"></script>
+    <link rel="stylesheet" href="node_modules/jasmine-core/lib/jasmine-core/jasmine.css">
     <script src="/node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
     <script src="/node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
     <script src="/node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
-    
+   
+ 
 
   <script src="/systemjs.config.js"></script>
   <script>
