improved test dashboard time

--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
     <!-- Polyfill(s) for older browsers -->
     <script src="/node_modules/core-js/client/shim.min.js"></script>
     <script src="/node_modules/zone.js/dist/zone.js"></script>
-    <script src="/node_modules/filesaver.js/FileSaver.js"></script>
+    <script src="/node_modules/file-saver/FileSaver.js"></script>
     <script src="/node_modules/jspdf/dist/jspdf.debug.js"></script>
     <script src="/node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
     <script src="/node_modules/exceljs/dist/exceljs.js"></script>
