--- a/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
   <title>Trappist</title>
 
   <!--CSS-->
+  <script src="/node_modules/@@aspnet/signalr-client/dist/browser/signalr-clientES5-1.0.0-alpha2-final.js"></script>
   <environment names="Development">
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/node_modules/@@angular/material/prebuilt-themes/indigo-pink.css">
