fixed import issue

--- a/Trappist/src/Promact.Trappist.Web/Views/Shared/_BeforeLoginLayout.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Shared/_BeforeLoginLayout.cshtml
@@ -24,7 +24,7 @@
     </environment>
 
     <environment names="Staging,Production">
-        <link rel="stylesheet" href="/dist/bundle.css">
+        <link rel="stylesheet" href="/dist/styles.bundle.css">
     </environment>
 </head>
 
