--- a/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Shared/_Layout.cshtml
@@ -13,9 +13,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title>Trappist</title>
-
-  <!--CSS-->
-  <script src="/node_modules/@@aspnet/signalr-client/dist/browser/signalr-clientES5-1.0.0-alpha2-final.js"></script>
+  
   <environment names="Development">
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="/node_modules/@@angular/material/prebuilt-themes/indigo-pink.css">
@@ -23,7 +21,7 @@
   </environment>
 
   <environment names="Staging,Production">
-    <link rel="stylesheet" href="/dist/bundle.css">
+    <link rel="stylesheet" href="/dist/styles.bundle.css">
   </environment>
 
   <!--TODO: Copy to local maybe-->
