Added some e2e classes.

--- a/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/Login.cshtml
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="actions-area">
-            <button type="submit" class="btn btn-primary">Sign In</button>
+            <button e2e="submit-btn" type="submit" class="btn btn-primary">Sign In</button>
             <a asp-action="ForgotPassword">Forgot Password?</a>
         </div>
     </form>
