--- a/Trappist/src/Promact.Trappist.Web/Views/Account/ForgotPassword.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Account/ForgotPassword.cshtml
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div class="actions-area">
-            <button type="submit" class="btn btn-primary">Send Password Reset Link</button>
+            <button e2e="reset-pwd-btn" type="submit" class="btn btn-primary">Send Password Reset Link</button>
             <a asp-action="Login">Back to Login</a>
         </div>
     </form>
