--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Conduct.cshtml
@@ -5,7 +5,7 @@
 
 <conduct>
 
-    <div class="loader-container main-loader">
+    <div e2e="progress-loader" class="loader-container main-loader">
         <div class="loader-block">
             <div class="spinner"></div>
             <p class="font-semibold mt10">Loading...</p>
