--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <app>
-    <div class="loader-container main-loader">
+    <div e2e="progress-loader" class="loader-container main-loader">
         <div class="loader-block">
             <div class="spinner"></div>
             <p class="font-semibold mt10">Loading...</p>
