--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -31,6 +31,7 @@
 
 <environment names="Staging,Production">
   <script src="https://fastcdn.org/FileSaver.js/1.1.20151003/FileSaver.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
   <script src="/dist/inline.bundle.js"></script>
   <script src="/dist/polyfills.bundle.js"></script>
   <script src="/dist/main.bundle.js"></script>
