--- a/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
+++ b/Trappist/src/Promact.Trappist.Web/Views/Home/Index.cshtml
@@ -13,14 +13,14 @@
 <form asp-controller="Profile" asp-action="LogOut" method="post" id="logoutForm" class="navbar-right"></form>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.bundle.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.4.3/lib/alea.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/2.3.2/jspdf.plugin.autotable.min.js"></script>
 
 <environment names="Development">
     <!-- Polyfill(s) for older browsers -->
     <script src="/node_modules/core-js/client/shim.min.js"></script>
     <script src="/node_modules/zone.js/dist/zone.js"></script>
     <script src="/node_modules/file-saver/filesaver.js"></script>
-    <script src="/node_modules/jspdf/dist/jspdf.debug.js"></script>
-    <script src="/node_modules/jspdf-autotable/dist/jspdf.plugin.autotable.js"></script>
     <script src="/node_modules/exceljs/dist/exceljs.min.js"></script>
     <script src="/node_modules/systemjs/dist/system.src.js"></script>
     <script src="/node_modules/screenfull/dist/screenfull.js"></script>
@@ -31,10 +31,10 @@
 </environment>
 
 <environment names="Staging,Production">
-  <script src="https://fastcdn.org/FileSaver.js/1.1.20151003/FileSaver.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
-  <script src="/dist/inline.bundle.js"></script>
-  <script src="/dist/polyfills.bundle.js"></script>
-  <script src="/dist/main.bundle.js"></script>
-  <link href="/dist/styles.bundle.css" rel="stylesheet" />
+    <script src="https://fastcdn.org/FileSaver.js/1.1.20151003/FileSaver.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.js"></script>
+    <script src="/dist/inline.bundle.js"></script>
+    <script src="/dist/polyfills.bundle.js"></script>
+    <script src="/dist/main.bundle.js"></script>
+    <link href="/dist/styles.bundle.css" rel="stylesheet" />
 </environment>
